Source/WebCore: WebVTT: fix vertical cue alignment. https://bugs.webkit.org/show_bug.cgi?id=136627. <rdar://problem/49725538>

Patch by Gary Katsevman <git@gkatsev.com> on 2019-05-02
Reviewed by Eric Carlson.

Updated existing test results.

* html/track/VTTCue.cpp:
(WebCore::VTTCueBox::applyCSSProperties):

LayoutTests:
WebVTT: vertical cue text alignment is the wrong way around
https://bugs.webkit.org/show_bug.cgi?id=136627
<rdar://problem/49725538>

Patch by Gary Katsevman <git@gkatsev.com> on 2019-05-02
Reviewed by Eric Carlson.

* platform/ios/media/track/track-cue-rendering-vertical-expected.txt:
* platform/mac/TestExpectations: Unskipped test.
* platform/mac/media/track/track-cue-rendering-vertical-expected.png: Removed.
* platform/mac/media/track/track-cue-rendering-vertical-expected.txt:

Canonical link: https://commits.webkit.org/211684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244891 268f45cc-cd09-0410-ab3c-d52691b4dbfc